--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -14,6 +15,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -40,7 +42,9 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "markdown-it": "^12.0.4",
     "mini-css-extract-plugin": "0.11.3",
+    "mongodb": "^3.6.5",
     "node-html-parser": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -56,6 +60,8 @@
     "react-bootstrap": "^1.4.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown-editor-lite": "^1.2.4",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
@@ -76,7 +82,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "api-server": "node server/api-server.js",
+    "dev": "concurrently --kill-others \"npm run api-server\" \"npm run start\""
   },
   "browserslist": {
     "production": [
@@ -155,5 +163,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0"
   }
 }
