--- a/package.json
+++ b/package.json
@@ -81,10 +81,10 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "front": "nodemon scripts/start.js localhost 3000",
     "build": "node scripts/build.js",
     "api-server": "node server/api-server.js",
-    "dev": "concurrently --kill-others \"npm run api-server\" \"npm run start\""
+    "start": "concurrently --kill-others \"npm run api-server\" \"npm run front\""
   },
   "browserslist": {
     "production": [
